force-app/main/default/objects/AthenaCases__x/AthenaCases__x.object-meta.xml
<CustomObject>
    <description>AthenaCases</description>
    <externalDataSource>OData_Service</externalDataSource>
    <externalName>AthenaCases</externalName>
    <label>Archival Data</label>
    <pluralLabel>Archival Data</pluralLabel>
</CustomObject>