force-app/main/default/objects/AthenaCases__x/fields/accountnumber__c.field-meta.xml
<CustomField>
    <fullName>accountnumber__c</fullName>
    <description>accountnumber</description>
    <externalDeveloperName>accountnumber</externalDeveloperName>
    <label>Accountnumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>