force-app/main/default/objects/AthenaCases__x/fields/case_id__c.field-meta.xml
<CustomField>
    <fullName>case_id__c</fullName>
    <description>case_id</description>
    <externalDeveloperName>case_id</externalDeveloperName>
    <label>Case_id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>