force-app/main/default/objects/AthenaCases__x/fields/contractnumber__c.field-meta.xml
<CustomField>
    <fullName>contractnumber__c</fullName>
    <description>contractnumber</description>
    <externalDeveloperName>contractnumber</externalDeveloperName>
    <label>Contractnumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>