force-app/main/default/objects/AthenaCases__x/fields/day__c.field-meta.xml
<CustomField>
    <fullName>day__c</fullName>
    <description>day</description>
    <externalDeveloperName>day</externalDeveloperName>
    <label>Day</label>
    <length>128</length>
    <type>Text</type>
</CustomField>