force-app/main/default/objects/AthenaCases__x/fields/migration_source__c.field-meta.xml
<CustomField>
    <fullName>migration_source__c</fullName>
    <description>_migration_source</description>
    <externalDeveloperName>_migration_source</externalDeveloperName>
    <label>migration_source</label>
    <length>128</length>
    <type>Text</type>
</CustomField>