force-app/main/default/objects/AthenaCases__x/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <description>month</description>
    <externalDeveloperName>month</externalDeveloperName>
    <label>Month</label>
    <length>128</length>
    <type>Text</type>
</CustomField>