force-app/main/default/objects/AthenaCases__x/fields/nationalid__c.field-meta.xml
<CustomField>
    <fullName>nationalid__c</fullName>
    <description>nationalid</description>
    <externalDeveloperName>nationalid</externalDeveloperName>
    <label>Nationalid</label>
    <length>128</length>
    <type>Text</type>
</CustomField>