force-app/main/default/objects/AthenaCases__x/fields/primaryphone__c.field-meta.xml
<CustomField>
    <fullName>primaryphone__c</fullName>
    <description>primaryphone</description>
    <externalDeveloperName>primaryphone</externalDeveloperName>
    <label>Primaryphone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>