force-app/main/default/objects/AthenaCases__x/fields/pycustomername__c.field-meta.xml
<CustomField>
    <fullName>pycustomername__c</fullName>
    <description>pycustomername</description>
    <externalDeveloperName>pycustomername</externalDeveloperName>
    <label>Pycustomername</label>
    <length>128</length>
    <type>Text</type>
</CustomField>