force-app/main/default/objects/AthenaCases__x/fields/pylabel__c.field-meta.xml
<CustomField>
    <fullName>pylabel__c</fullName>
    <description>pylabel</description>
    <externalDeveloperName>pylabel</externalDeveloperName>
    <label>Pylabel</label>
    <length>128</length>
    <type>Text</type>
</CustomField>