force-app/main/default/objects/AthenaCases__x/fields/pystatuswork__c.field-meta.xml
<CustomField>
    <fullName>pystatuswork__c</fullName>
    <description>pystatuswork</description>
    <externalDeveloperName>pystatuswork</externalDeveloperName>
    <label>Pystatuswork</label>
    <length>128</length>
    <type>Text</type>
</CustomField>