force-app/main/default/objects/AthenaCases__x/fields/s3_path__c.field-meta.xml
<CustomField>
    <fullName>s3_path__c</fullName>
    <description>s3_path</description>
    <externalDeveloperName>s3_path</externalDeveloperName>
    <label>S3_path</label>
    <length>128</length>
    <type>Text</type>
</CustomField>