force-app/main/default/objects/AthenaCases__x/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <description>year</description>
    <externalDeveloperName>year</externalDeveloperName>
    <label>Year</label>
    <length>128</length>
    <type>Text</type>
</CustomField>